--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@lanaco/lnc-react-ui": "^3.11.7",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "@react-three/drei": "^9.102.6",
+    "@react-three/fiber": "^8.15.19",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/three": "^0.162.0",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
@@ -20,6 +23,7 @@
     "react-scroll-parallax": "^3.4.5",
     "react-spring": "^9.7.3",
     "smooth-scrollbar": "^8.8.4",
+    "three": "^0.162.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
